new_isa_tests/test_logic/test_logic.align.err
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_call_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
test_logic.mcode:46:7: expecting ''u'', found ''o''
mcode_instruction
Parsing Exception: test_logic.mcode:46:910: expecting SEMICOLON, found ''
Info: finished parsing file test_logic.mcode
Error: there were errors while parsing file test_logic.mcode, check the log
