new_isa_tests/test_logic/test_logic.mcode
// ── APARA startup (APARA C Compiler v6: 28-reg + spilling) ──────────────────
// Fixed: $r0=ZERO $r28=GBASE=0x400  Reserved: $r26=FP $r27=SP
// Pool:  $r1-$r25 $r29-$r31  (28 registers, all recycled dynamically)
apara_start:
||
    $set $r28 0 1024
    $set $r27 0 32760
;
||
    + $r26 ($i64) $r0 $r27
    + $r30 ($i64) $r0 0
;
||
    $st ($i32) [$r28 + 0] $r30
    + $r30 ($i64) $r0 0
;
||
    $st ($i32) [$r28 + 8] $r30
    + $r30 ($i64) $r0 0
;
||
    $st ($i32) [$r28 + 16] $r30
    $call main
;
||
    $halt
;
main:
||
    $st ($i64) [$r27 + 0] $r26
    + $r26 ($i64) $r0 $r27
    $set $r1 0 824
;
||
    - $r27 ($i64) $r27 $r1
    + $r1 ($i64) $r26 -8
    + $r2 ($i64) $r0 240
;
||
    $st ($i32) [$r1 + 0] $r2
    + $r2 ($i64) $r26 -16
    + $r3 ($i64) $r0 15
;
||
    $st ($i32) [$r2 + 0] $r3
    $nop
    + $r3 ($i64) $r26 -8
;
||
    $ld ($i32) $r4 [$r3 + 0]
    + $r5 ($i64) $r26 -16
;
||
    $ld ($i32) $r6 [$r5 + 0]
;
||
    ~| $r7 ($i64) $r4 $r6
;
||
    $st ($i32) [$r28 + 0] $r7
    + $r8 ($i64) $r26 -8
;
||
    $ld ($i32) $r9 [$r8 + 0]
    + $r10 ($i64) $r26 -16
;
||
    $ld ($i32) $r11 [$r10 + 0]
;
||
    ~& $r12 ($i64) $r9 $r11
;
||
    $st ($i32) [$r28 + 8] $r12
    + $r13 ($i64) $r26 -8
;
||
    $ld ($i32) $r14 [$r13 + 0]
    + $r15 ($i64) $r26 -16
;
||
    $ld ($i32) $r16 [$r15 + 0]
;
||
    ~~ $r17 ($i64) $r14 $r16
;
||
    $st ($i32) [$r28 + 16] $r17
    $ld ($i32) $r18 [$r28 + 0]
    $ld ($i32) $r19 [$r28 + 8]
;
||
    + $r20 ($i64) $r18 $r19
    $ld ($i32) $r21 [$r28 + 16]
;
||
    + $r22 ($i64) $r20 $r21
;
||
    + $r1 ($i64) $r0 $r22
    ? ($i64) $r0 == $goto main_epilogue
;
main_epilogue:
||
    + $r27 ($i64) $r0 $r26
;
||
    $ld ($i64) $r26 [$r27 + 0]
    $return
;
